Corrected leave/kick/refuse/cancel team routes
