# src/controllers/teams/index.ts
@@ -5,11 +5,13 @@ import createTeam from './createTeam';
 import updateTeam from './updateTeam';
 import deleteTeam from './deleteTeam';
 import createTeamRequest from './createTeamRequest';
-import deleteTeamRequest from './deleteTeamRequest';
+import cancelTeamRequest from './cancelTeamRequest';
+import refuseTeamRequest from './refuseTeamRequest';
 import lockTeam from './lockTeam';
 import acceptRequest from './acceptRequest';
 import kickUser from './kickUser';
 import promoteCaptain from './promoteCaptain';
+import leaveTeam from './leaveTeam';
 
 const router = Router();
 
@@ -18,11 +20,13 @@ router.post('/', createTeam);
 router.get('/current', getTeam);
 router.put('/current', updateTeam);
 router.delete('/current', deleteTeam);
+router.delete('/current/users/current', leaveTeam);
 router.delete('/current/users/:userId', kickUser);
 router.put('/current/captain/:userId', promoteCaptain);
 
 router.post('/:teamId/joinRequests', createTeamRequest);
-router.delete('/current/joinRequests/:userId', deleteTeamRequest);
+router.delete('/current/joinRequests/current', cancelTeamRequest);
+router.delete('/current/joinRequests/:userId', refuseTeamRequest);
 router.post('/current/joinRequests/:userId', acceptRequest);
 
 router.post('/current/lock', lockTeam);
